fixed editor and run-button height and visibility issues

--- a/src/main/webapp/stylesheets/light.css
+++ b/src/main/webapp/stylesheets/light.css
@@ -46,7 +46,7 @@ code {
 
 .cm-s-cypher {
     text-shadow: none;
-    background: #f5f5f5;
+    background: white;
     color: black;
 }
 
